# aoc2015

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  run.sh
day1/: day1.cpp  day1.h
day2/: day2.cpp  day2.h
day3/: day3.cpp  day3.h
day4/: day4.cpp  day4.h
day5/: day5.cpp  day5.h
day6/: day6.cpp  day6.h
day7/: day7.cpp  day7.h
